# BQS

./: # ✅ END-TO-END FLOW VERIFIED.txt  .dockerignore  .gitignore  3_ROLE_WORKFLOW_IMPLEMENTATION.md  ACTION_REQUIRED_DASHBOARD.md  ACTION_REQUIRED_IMPLEMENTATION.md  ACTION_REQUIRED_QUICKSTART.md  ALL_ROLES_VISIBLE_FOR_DEMO.md  ARCHITECTURE.md  ARCHITECTURE_FLOW_DIAGRAM.md  ASSIGNMENT_LOGIC_GUIDE.md  ASSIGN_ARCHITECT_GUIDE.md  Able to submit assessment and store.txt  BATCH_SYNC_INTEGRATION_GUIDE.md  BATCH_SYNC_SIZE_10.md  BID_GOVERNANCE_DASHBOARD_SPEC.md  BQS_ChangesSuggested_Demo3&4.docx  BQS_REQUIREMENTS_DOCUMENT.md  BUSINESS_FLOW_COVERAGE_ANALYSIS.md  BUSINESS_FLOW_VERIFICATION_SUMMARY.md  Bid Manager.csv  CHANGES_SUMMARY.md  CLEANUP.md  COMPLETE_INTEGRATION_GUIDE.md  COMPLETE_ROLE_SUMMARY.md  COMPLETE_SETUP_GUIDE.md  Changes_till17Mar26  DASHBOARD_ACTIONS_REFERENCE.md  DASHBOARD_OPPORTUNITIES_GUIDE.md  DASHBOARD_READY.md  DASHBOARD_REQUIREMENTS_TABULAR.md  DASHBOARD_SYNC_GUIDE.md  DASHBOARD_UPDATES.md  DOCKER_GUIDE.md  DUMMY_DATA_GUIDE.md  DYNAMIC_FRONTEND_IMPLEMENTATION.md  EXACT_URL_FORMAT.md  EXECUTE_BATCH_SYNC.md  EXECUTION_SUMMARY.md  FETCH_ALL_GLOBAL_OPPORTUNITIES.md  (+255 more)
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  add_workflow_status.py  auto_heal.py  check_database.py  check_db_data.py  check_emily.py  check_import.py  check_kunal.py  check_legal_lead.py  check_oracle_data_quality.py  check_robert.py  check_sh.py  check_sp.py  check_users_db.py  cleanup_v2.py  constants.py  create_users_api.py  database.py  debug_counts.py  debug_david.py  (+59 more)
(+213 files in other folders)
